--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flutter_japanese_restaurant_app
+name: paneran
 description: Japanese restaurant app built in flutter using GetX | Bloc | Cubit | Provider
 
 # The following line prevents the package from being accidentally published to
